--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,28 @@
 .DS_Store
 */build-tmp/*
+*/build/*
 */exports/*.jpg
 */exports/*.tiff
+*/colorStudy18f/*
+*/spidey/*
+*/stereo_images/*
+*/animation_images/*
+lennyTest/*.tiff
+lennyTest/*.tif
+lennyTest/*.jpg
+lennyTest/walkway/*
+lennyTest/alignment_exports/*
+
+Aligner_Test/build/*
+Aligner_Test/data/*
+Aligner_Test/exports-flower_pot/*
+Aligner_Test/exports-walkway-negative/*
+Aligner_Test/exports-walkway-positive/*
+Aligner_Test/exports/*
+Aligner_Test/land/*
+Aligner_Test/large/*
+Aligner_Test/walkway/*
+
+imageLoader/data/*
+
+alignment/large/*
