--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 */spidey/*
 */stereo_images/*
 */animation_images/*
+lennyTest/*/*.tiff
+lennyTest/*/*.tif
+lennyTest/*/*.jpg
 lennyTest/*.tiff
 lennyTest/*.tif
 lennyTest/*.jpg
